# SVGenesis

./: .gitignore  Cargo.toml  README.md
src/: events.rs  hsl.rs  lib.rs  nft_generator.rs  types.rs  utils.rs
src/layers/: layer.rs  mod.rs
src/layers/backgrounds/: background_checkerboard.rs  background_chevron.rs  background_circle_pattern.rs  background_diagonal_split.rs  background_diagonal_split_pattern.rs  background_diamond_pattern.rs  background_double_diagonal_split.rs  background_four_squares.rs  background_fourway_split.rs  background_puzzle.rs  background_rectangle.rs  background_straight_split.rs  background_threeway_split.rs  background_two_stripes.rs  background_zig_zag_split.rs  mod.rs
src/layers/big_elements/: big_element_full_circle.rs  big_element_half_circle.rs  big_element_pill.rs  big_element_pill_ball.rs  big_element_pill_split_circle.rs  big_element_quarter_circle.rs  big_element_square.rs  big_element_three_quarter_circle.rs  big_element_triangle.rs  big_element_two_rectangles.rs  big_element_two_squares.rs  big_element_zig_zag.rs  mod.rs
src/layers/frames/: frame_straight.rs  mod.rs
src/layers/overlays/: mod.rs  overlay_diamond.rs  overlay_half_circle.rs  overlay_triangle.rs
src/layers/small_elements/: mod.rs  small_element_arch.rs  small_element_arch_shadow.rs  small_element_ball.rs  small_element_circle.rs  small_element_circle_shadow.rs  small_element_cross.rs  small_element_cross_shadow.rs  small_element_cube.rs  small_element_diagonal_split_square.rs  small_element_double_circle.rs  small_element_double_diamond.rs  (+16 more)
tests/: lib.rs
