[package]
name = "svgenesis"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.2.0" }
svg = { git = "https://github.com/yr12345678/svg" }
random = { git = "https://github.com/dot-random/dot-random", tag = "v0.1-scrypto-1.2.0", package = "random" }
urlencoding = "2.1.3"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"]}
hex = "0.4.3"
resvg = "0.44.0"

[dev-dependencies]
scrypto-test = { version = "1.2.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace